k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-backend
  namespace: apps
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: api-backend
  ports:
    - name: http
      port: 80
      targetPort: 8080
